--- a/users/templates/users/dashboard_base.html
+++ b/users/templates/users/dashboard_base.html
@@ -48,7 +48,7 @@
                     <i class="fas fa-sign-out-alt"></i>
                     <span>Logout</span>
                 </a>
-                {% else %}
+                {% endif %}
                 {% if user.is_staff %}
                 <a href="{% url 'users:dashboard' %}"
                     class="menu-item {% if request.resolver_match.url_name == 'dashboard' %}active{% endif %}">
@@ -56,12 +56,14 @@
                     <span>Dashboard</span>
                 </a>
                 {% endif %}
-                {% if user.role == 'Admin' or user.role == 'Receptionist' or user.role == 'Doctor' or user.role == 'Triage Nurse' %}
+                {% if user.role == 'Admin' or user.role == 'Receptionist' %}
                 <a href="{% url 'home:reception_dashboard' %}"
                     class="menu-item {% if request.resolver_match.url_name == 'reception_dashboard' %}active{% endif %}">
                     <i class="fas fa-hospital"></i>
                     <span>Reception Dashboard</span>
                 </a>
+
+
                 <a href="{% url 'home:patient_list' %}"
                     class="menu-item {% if request.resolver_match.url_name == 'patient_list' %}active{% endif %}">
                     <i class="fas fa-procedures"></i>
@@ -71,6 +73,20 @@
                     class="menu-item {% if request.resolver_match.url_name == 'patient_create' %}active{% endif %}">
                     <i class="fas fa-user-plus"></i>
                     <span>Add Patient</span>
+                </a>
+                  <a href="{% url 'accounts:discharge_dashboard' %}"
+                    class="menu-item {% if request.resolver_match.url_name == 'discharge_dashboard' %}active{% endif %}">
+                    <i class="fas fa-sign-out-alt"></i>
+                    <span>Discharge Billing</span>
+                </a>
+                {% endif %}
+
+
+                {% if user.role == 'Admin' or user.role == 'Triage Nurse'   %}
+                <a href="{% url 'home:reception_dashboard' %}"
+                    class="menu-item {% if request.resolver_match.url_name == 'triage_dashboard' %}active{% endif %}">
+                    <i class="fas fa-heartbeat"></i>
+                    <span>Triage Dashboard</span>
                 </a>
                 {% endif %}
 
@@ -88,6 +104,10 @@
                     <i class="fas fa-procedures"></i>
                     <span>Inpatient</span>
                 </a>
+                <a href="{% url 'inventory:create_request' %}" class="btn-add"
+            style="padding: 0.5rem 1rem; font-size: 0.875rem;">
+            <i class="fas fa-plus"></i>Miny Pharmacy
+        </a>
                 {% endif %}
 
                 {% if user.role == 'Admin' or user.role == 'Doctor' or user.role == 'Lab Technician' %}
@@ -98,7 +118,7 @@
                 </a>
                 {% endif %}
 
-                {% if user.role == 'Admin' or user.role == 'Doctor' or user.role == 'Pharmacist' %}
+                {% if user.role == 'Admin' or user.role == 'Pharmacist' %}
                 <a href="{% url 'home:pharmacy_dashboard' %}"
                     class="menu-item {% if request.resolver_match.url_name == 'pharmacy_dashboard' %}active{% endif %}">
                     <i class="fas fa-pills"></i>
@@ -139,13 +159,7 @@
                 </div>
                 {% endif %}
 
-                {% if user.role == 'Admin' or user.role == 'Doctor' or user.role == 'Nurse' or user.role == 'Triage
-                Nurse' %}
-                <a href="#" class="menu-item {% if 'triage' in request.resolver_match.namespaces %}active{% endif %}">
-                    <i class="fas fa-ambulance"></i>
-                    <span>Triage</span>
-                </a>
-                {% endif %}
+            
 
                 {% if user.role == 'Admin' or user.role == 'Doctor' %}
                 <a href="{% url 'home:opd_dashboard' %}"
@@ -155,7 +169,7 @@
                 </a>
                 {% endif %}
 
-                {% if user.role == 'Admin' or user.role == 'Accountant' or user.role == 'Pharmacist' or user.role == 'Lab Technician' or user.role == 'Procurement Officer' %}
+                {% if user.role == 'Admin' or user.role == 'Accountant' %}
                 <a href="{% url 'inventory:item_list' %}"
                     class="menu-item {% if request.resolver_match.namespace == 'inventory' %}active{% endif %}">
                     <i class="fas fa-boxes"></i>
@@ -173,7 +187,7 @@
                 </div>
                 {% endif %}
 
-                {% if user.role == 'Admin' or user.role == 'Accountant' or user.role == 'Receptionist' or user.role == 'SHA Manager' %}
+                {% if user.role == 'Admin' or user.role == 'Accountant' %}
                 <a href="{% url 'accounts:accountant_dashboard' %}"
                     class="menu-item {% if request.resolver_match.url_name == 'accountant_dashboard' %}active{% endif %}">
                     <i class="fas fa-calculator"></i>
@@ -198,7 +212,15 @@
             </div>
 
             <div class="sidebar-footer">
-                {% if user.role != 'Doctor' %}
+                {% if user.role != 'Doctors' %}
+                <a href="{% url 'inventory:create_request' %}" class="btn-add"
+            style="padding: 0.5rem 1rem; font-size: 0.875rem;">
+            <i class="fas fa-plus"></i> New Request
+        </a>
+         <a href="{% url 'home:health_records' %}" class="btn-add"
+            style="padding: 0.5rem 1rem; font-size: 0.875rem;">
+            <i class="fas fa-plus"></i> HR
+        </a>
                 <a href="{% url 'users:profile' %}" class="menu-item">
                     <i class="fas fa-user"></i>
                     <span>Profile</span>
