--- a/home/templates/home/patient_detail.html
+++ b/home/templates/home/patient_detail.html
@@ -533,10 +533,14 @@
                     {% endif %}
                     {% endif %}
                     {% if user.role == 'Doctor' %}
-                    <a href="{% url 'home:create_prescription' patient.pk %}" class="modern-btn btn-success"
+                    {% with visit_id=selected_visit.id|default:latest_visit.id %}
+                    {% if visit_id %}
+                    <a href="{% url 'home:create_prescription' visit_id %}" class="modern-btn btn-success"
                         style="width: 100%;">
                         <i class="fas fa-prescription"></i> New Prescription
                     </a>
+                    {% endif %}
+                    {% endwith %}
                     {% endif %}
                     {% else %}
                     <div
